# 2013ctest

./: CMakeLists.txt  Makefile  README.md  a.out  eliza  eliza.c  eliza_state.c  map.c  parser.c  rule.c  string_utils.c
